# alpha-lab

./: .gitattributes  .gitignore  CASE_STUDY.md  CLAUDE.md  DEPLOYMENT_MANIFEST.md  HANDOFF.md  HISTORY.md  README.md  STATUS.md  dashboard.html  pyproject.toml  setup.py
audit-bundle/: 00-README-manifest.md  01-STATE-statarb.md  02-design-spec.md  04-RECOMPUTE.md  com.rimrim.earnings-collect.plist.disabled  com.rimrim.hunt2026-paper.plist.disabled
core/: env.py
memos/: 2026-07-11-canonical-review.md  2026-07-11-independent-ops-audit.md  CLEAN_CYCLE_REPORT_2026-07-13.md  CLEAN_CYCLE_REPORT_TEMPLATE.md  DRAFT-alpha-revisions-roadmap-2026-07-11.md  alpha-forward-setup-2026-07-14.md  alpha-roadmap-2026-07.md  band-ruling-2026-07-21.md  diagnostics-2026-07-10.md  earnings-blackout-verdict.md  earnings-event-alpha-data-readiness-2026-07-14.md  hunt2026-5y-verdict.md  hunt2026-verdict.md  hunt2026-walkforward.md  independent-alpha-program-2026-07-10.md  js-factor-program-final-2026-07-14.md  mc-account-isolation-cutover-2026-07-15.md  panel-phantom-row-correction.md
notebooks/: statarb_research.py
reports/: statarb_tearsheet_all_on.html  statarb_tearsheet_all_on.note.txt  tearsheet.py
scripts/: asset_growth_run.py  build_dashboard.py  earnings_collect.py  gkx_pc_timing_run.py  gkx_run.py  hunt_alpha_review.py  hunt_paper_reconcile.py  hunt_paper_run.py  llm_sentiment_run.py  mc_cutover_verify.py  news_fetch_run.py  paper_book_run.py  paper_monitor.py  paper_publish.py  paper_status.py  statarb_ablation_run.py  statarb_residual_run.py  statarb_run.py
(+399 files in other folders)
