[project]
name = "alpha-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0", "numpy>=1.26", "scipy>=1.11", "pyarrow>=14",
  "yfinance>=0.2.40", "anthropic>=0.30", "scikit-learn>=1.4", "requests>=2.31", "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pybind11>=2.12", "setuptools>=68"]
report = ["quantstats", "matplotlib", "seaborn"]
ml = ["shap", "xgboost", "scikit-learn", "jupyterlab", "nbconvert", "nbformat", "jupytext"]
paper = ["alpaca-py>=0.20"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["core*", "tracks*"]
